[package]
edition = "2021"
name = "mtif"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
nom-bufreader = "0.2.0"
time = {version = "0.3.17", features = ["std", "macros"]}

[dev-dependencies]
insta = "1.26.0"
