[package]
authors = [
  "Pocket7878 <poketo7878@gmail.com>",
]
description = "Movable Type Import Format file parser"
edition = "2021"
license-file = "LICENCE"
name = "mtif"
repository = "https://github.com/pocket7878/mtif-rs"
version = "0.1.2"

[dependencies]
nom = "7"
time = {version = "0.3.17", features = ["std", "macros"]}

[dev-dependencies]
insta = "1.26.0"
